# gamengine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat  conanfile.txt  run.bat
assets/: cone.fbx  cube.fbx
shader/: test_fragment.glsl  test_vertex.glsl
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  application.h  camera.cpp  camera.h  event.h  importer.cpp  importer.h  key_event.h  node.h  object.h  renderable.h  resource_loader.cpp  shader.cpp  shader.h  staticmesh.h  viewport.cpp  viewport.h  window.cpp  window.h  window_resize_event.h
src/window/: CMakeLists.txt  window.cpp  window.h
test/: CMakeLists.txt  gl_load.cpp
